package movimientos;

public interface Movimiento {
    public int moverFila(int columna);
    public int moverColumna(int fila);
}
